# src/backend/WebApi/Controllers/BloggingController.cs
@@ -1,3 +1,4 @@
+using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
 using WebApi.Entities;
 using WebApi.Repository;
@@ -8,7 +9,7 @@ namespace WebApi.Controllers;
 ///     Blogging controller
 /// </summary>
 [ApiController]
-[Route("[controller]")]
+[Route("api/v1/[controller]")]
 public class BloggingController(ILogger<BloggingController> logger, IBloggingRepository bloggingRepository) : ControllerBase
 {
     /// <summary>
@@ -17,10 +18,10 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token to cancel the request.</param>
     /// <returns>A list of BlogDto objects wrapped in an ActionResult.</returns>
     [HttpGet("blog", Name = "GetBlogs")]
-    public async Task<ActionResult<IEnumerable<BlogDto>>> GetBlogs(CancellationToken cancellationToken)
+    public async Task<Ok<List<BlogDto>>> GetBlogs(CancellationToken cancellationToken)
     {
         logger.LogInformation("GetBlogs was called");
-        return Ok(await bloggingRepository.ListBlogsAsync(cancellationToken));
+        return TypedResults.Ok((await bloggingRepository.ListBlogsAsync(cancellationToken)).ToList());
     }
 
     /// <summary>
@@ -30,14 +31,14 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token to cancel the request.</param>
     /// <returns>A single BlogDto object wrapped in an ActionResult. Returns NotFound if the blog does not exist.</returns>
     [HttpGet("blog/{id:int}", Name = "GetBlog")]
-    public async Task<ActionResult<BlogDto>> GetBlog(int id, CancellationToken cancellationToken)
+    public async Task<Results<Ok<BlogDto>, NotFound>> GetBlog(int id, CancellationToken cancellationToken)
     {
         logger.LogInformation("GetBlog was called with id {BlogId}", id);
         var blog = await bloggingRepository.GetBlogAsync(id, cancellationToken);
         if (blog == null)
-            return NotFound();
+            return TypedResults.NotFound();
 
-        return blog;
+        return TypedResults.Ok(blog);
     }
 
     /// <summary>
@@ -47,14 +48,14 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token</param>
     /// <returns>Returns the created or updated blog</returns>
     [HttpPost("blog", Name = "PostBlog")]
-    public async Task<ActionResult<BlogDto>> PostBlog(BlogDto blog, CancellationToken cancellationToken)
+    public async Task<Results<Ok<BlogDto>, NotFound>> PostBlog(BlogDto blog, CancellationToken cancellationToken)
     {
         logger.LogInformation("PostBlog was called");
         var blogEntry = await bloggingRepository.AddOrUpdateBlogAsync(blog, cancellationToken);
         if (blogEntry == null)
-            return NotFound();
+            return TypedResults.NotFound();
 
-        return blogEntry;
+        return TypedResults.Ok(blogEntry);
     }
 
     /// <summary>
@@ -64,10 +65,10 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token</param>
     /// <returns>Returns a list of posts</returns>
     [HttpGet("blog/{blogId:int}/posts", Name = "GetPosts")]
-    public async Task<ActionResult<IEnumerable<PostDto>>> GetPosts(int blogId, CancellationToken cancellationToken)
+    public async Task<Ok<List<PostDto>>> GetPosts(int blogId, CancellationToken cancellationToken)
     {
         logger.LogInformation("GetPosts was called with id {BlogId}", blogId);
-        return Ok(await bloggingRepository.ListPostsAsync(blogId, cancellationToken));
+        return TypedResults.Ok((await bloggingRepository.ListPostsAsync(blogId, cancellationToken)).ToList());
     }
 
     /// <summary>
@@ -77,14 +78,14 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token</param>
     /// <returns>Returns the requested post</returns>
     [HttpGet("post/{id:int}", Name = "GetPost")]
-    public async Task<ActionResult<PostDto>> GetPost(int id, CancellationToken cancellationToken)
+    public async Task<Results<Ok<PostDto>, NotFound>> GetPost(int id, CancellationToken cancellationToken)
     {
         logger.LogInformation("GetPost was called with id {PostId}", id);
         var post = await bloggingRepository.GetPostAsync(id, cancellationToken);
         if (post == null)
-            return NotFound();
+            return TypedResults.NotFound();
 
-        return post;
+        return TypedResults.Ok(post);
     }
 
     /// <summary>
@@ -94,13 +95,13 @@ public class BloggingController(ILogger<BloggingController> logger, IBloggingRep
     /// <param name="cancellationToken">Cancellation token</param>
     /// <returns>Returns the created post</returns>
     [HttpPost("post", Name = "PostPost")]
-    public async Task<ActionResult<PostDto>> PostPost(PostDto post, CancellationToken cancellationToken)
+    public async Task<Results<Ok<PostDto>, NotFound>> PostPost(PostDto post, CancellationToken cancellationToken)
     {
         logger.LogInformation("PostPost was called");
         var postEntry = await bloggingRepository.AddOrUpdatePostAsync(post, cancellationToken);
         if (postEntry == null)
-            return NotFound();
+            return TypedResults.NotFound();
 
-        return postEntry;
+        return TypedResults.Ok(postEntry);
     }
 }
