# src/backend/WebApi/swagger.json
@@ -3,19 +3,10 @@
   "info": {
     "title": "Example API",
     "description": "An ASP.NET Core Web API example instance",
-    "termsOfService": "https://example.com/terms",
-    "contact": {
-      "name": "Example Contact",
-      "url": "https://example.com/contact"
-    },
-    "license": {
-      "name": "Example License",
-      "url": "https://example.com/license"
-    },
     "version": "v1"
   },
   "paths": {
-    "/Blogging/blog": {
+    "/api/v1/Blogging/blog": {
       "get": {
         "tags": [
           "Blogging"
@@ -78,13 +69,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/Blogging/blog/{id}": {
+    "/api/v1/Blogging/blog/{id}": {
       "get": {
         "tags": [
           "Blogging"
@@ -115,13 +109,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/Blogging/blog/{blogId}/posts": {
+    "/api/v1/Blogging/blog/{blogId}/posts": {
       "get": {
         "tags": [
           "Blogging"
@@ -161,7 +158,7 @@
         }
       }
     },
-    "/Blogging/post/{id}": {
+    "/api/v1/Blogging/post/{id}": {
       "get": {
         "tags": [
           "Blogging"
@@ -192,13 +189,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/Blogging/post": {
+    "/api/v1/Blogging/post": {
       "post": {
         "tags": [
           "Blogging"
@@ -236,13 +236,16 @@
               }
             }
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/SendMessage": {
+    "/api/v1/SendMessage": {
       "get": {
         "tags": [
           "SendMessage"
@@ -265,7 +268,7 @@
         }
       }
     },
-    "/Service/ping": {
+    "/api/v1/Service/ping": {
       "get": {
         "tags": [
           "Service"
@@ -289,7 +292,7 @@
         }
       }
     },
-    "/Service/version": {
+    "/api/v1/Service/version": {
       "get": {
         "tags": [
           "Service"
@@ -313,7 +316,7 @@
         }
       }
     },
-    "/WeatherForecast": {
+    "/api/v1/WeatherForecast": {
       "get": {
         "tags": [
           "WeatherForecast"
